Add command line instructions to README